# CRaB

./: .gitignore  compute_hole_strength.py  config.py  engine.py  setup.sh  strengths_batch_script.sh  tournament_manager.py
cpp_skeleton/: CMakeLists.txt  build.sh
gtoish/: .player.py.swp  player.py
gtoish/deuces/deuces/: deck.py
gtoish_v0/: hole_strengths.csv  player.py
gtoish_v0/deuces/: go.py
gtoish_v0/deuces/deuces/: __init__.py
gtoish_v1/: player.py
gtoish_v1/deuces/deuces/: evaluator.py  lookup.py
gtoish_v1/deuces/performance/: perf_handeval.py
preflop_hand/: player.py
python_1/: player.py
python_skeleton/deuces copy/: go.py
python_skeleton/deuces copy/deuces/: deck.py
python_skeleton/deuces/deuces/: card.py  lookup.py
ref_lec_2/: player.py
ref_lec_3/deuces/: go.py
ref_lec_3/deuces/performance/: perf_specialk.py
week_3_bot/: player.py
